--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <span class="feature-tag">AI Analysis</span>
                         <span class="feature-tag">Portfolio Management</span>
                     </div>
-                    <a href="https://agentpmo.com" class="product-link" target="_blank">Learn More →</a>
+                    <a href="https://agentpmo.ai" class="product-link" target="_blank">Learn More →</a>
                 </div>
 
                 <!-- ISSA -->
@@ -86,7 +86,7 @@
                         <span class="feature-tag">AI Coaching</span>
                         <span class="feature-tag">Career Development</span>
                     </div>
-                    <a href="https://prept.com" class="product-link" target="_blank">Learn More →</a>
+                    <a href="https://preptapp.com" class="product-link" target="_blank">Learn More →</a>
                 </div>
             </div>
         </div>
