--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <!-- AgentPMO -->
                 <div class="product-card">
                     <div class="product-logo">
-                        <img src="assets/agentpmo-logo-160_1_.png" alt="AgentPMO Logo">
+                        <img src="assets/agentpmo-logo-160(1).png" alt="AgentPMO Logo">
                     </div>
                     <h3 class="product-name">AgentPMO</h3>
                     <p class="product-description">AI-powered project management intelligence that transforms how organizations plan, execute, and deliver complex initiatives.</p>
@@ -77,7 +77,7 @@
                 <!-- Prept -->
                 <div class="product-card">
                     <div class="product-logo">
-                        <img src="assets/Prept-logo-160_1_.png" alt="Prept Logo">
+                        <img src="assets/Prept-logo-160(1).png" alt="Prept Logo">
                     </div>
                     <h3 class="product-name">Prept</h3>
                     <p class="product-description">AI-powered interview preparation platform that helps candidates build confidence and skills for career-defining opportunities.</p>
